[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyChanLun"
version = "0.1.0"
description = "Applying the Chan Theory (Chan Lun) to analyze stock trading information."
readme = "README.md"
authors = [
    { name = "Steven Li", email = "sli@live.ca" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "yfinance",
    "numpy",
    "pandas"
]

[tool.setuptools]
packages = [
    "pychanlun"
]
